--- a/TV Calendar.csproj
+++ b/TV Calendar.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TV_Calendar</RootNamespace>
     <AssemblyName>TV Calendar</AssemblyName>
-    <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -88,10 +88,11 @@
     <CodeAnalysisRuleSetDirectories>;C:\Program Files\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
     <CodeAnalysisRuleDirectories>;C:\Program Files\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
     <CodeAnalysisIgnoreBuiltInRules>true</CodeAnalysisIgnoreBuiltInRules>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack">
-      <HintPath>E:\HtmlAgilityPack.dll</HintPath>
+      <HintPath>E:\HtmlAgilityPack.1.4.6\Net20\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -101,6 +102,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrowIcon.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="CustomButton.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -124,12 +128,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SeriesContainer.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="SeriesContainer.Designer.cs">
-      <DependentUpon>SeriesContainer.cs</DependentUpon>
-    </Compile>
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -137,8 +135,14 @@
       <DependentUpon>Settings.cs</DependentUpon>
     </Compile>
     <Compile Include="Storage.cs" />
+    <EmbeddedResource Include="ArrowIcon.resx">
+      <DependentUpon>ArrowIcon.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CustomButton.resx">
       <DependentUpon>CustomButton.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CustomLabel.resx">
+      <DependentUpon>CustomLabel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Element.resx">
       <DependentUpon>Element.cs</DependentUpon>
@@ -156,13 +160,11 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SeriesContainer.resx">
-      <DependentUpon>SeriesContainer.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -172,10 +174,12 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Resources\OpenSans-ExtraBold.ttf" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\light_bulb_off.png" />
     <None Include="Resources\Header.PNG" />
+    <None Include="Resources\light_bulb_on.png" />
     <Content Include="TV_ICON.ico" />
   </ItemGroup>
   <ItemGroup>
